--- a/index.html
+++ b/index.html
@@ -5,24 +5,58 @@
     <meta charset="utf-8">
     <title>Neha's Portfolio</title>
   </head>
-  <body style="background-color:#ff7f7f;">
+  <body style="background-color:white;">
     <div class="container">
-      <img src="img/logo.jpeg" alt="logo of NM" height="100px">
-      <h1>Neha Malhotra</h1>
+      <h1 id="neha">Neha Malhotra</h1>
+      <img class= "logo" src="img/cover.jpeg" alt="logo of NM"  height="200px">
     </div>
     <br>
     <br>
+    <div class="jumbertron" id="aboutme">
     <h2>About Me</h2>
-    <p>Hello my is Neha Malhotra. I have been practicing code from last 5 months. I have done my bachelors in Business and MBA in Financial Services. I want to learn code to enter IT sector. </p>
-    <ul>
+    <p>Hello my is <strong>Neha Malhotra</strong>. I have been practicing code from last 5 months. I have done my bachelors in Business and MBA in Financial Services. I want to learn code to enter in IT Industry.</p>
+    </div>
+
+
+    <div class="row">
+     <div class="col-xs-2">
+     <div class="well">
+    <ol>
+      <br>
+      <br>
     <h1>Projects I have done this week:</h1>
       <li><a href="https://github.com/nehamalhotra23/my-first-webpage">My First Project in Epicodus</a></li>
+      <p>This was my first project in EPICODUS. I have learnt so many concepts of HTML through this project. How to add images, linking text to websites and added styling sheet later on in this project.</p>
       <li><a href="https://github.com/nehamalhotra23/island-resort.git">Island Resort</a></li>
+      <p>In this project, I have learned that how to link different webpages to main webpage. To make it easy for the user to find sources he/she is looking for.</p>
       <li><a href="https://github.com/nehamalhotra23/wikipedia-rebuild">Epicodus Website</a></li>
+      <p>I practice making Epicodus website. Using Bootstrap to make it mobile friendly. Added rows and colum property of Bootstrap.</p>
       <li><a href="https://github.com/nehamalhotra23/cupcake-shop">Cup Cake Shop</a></li>
+      <p> In this project, I practice adding floats and box model. </p>
       <li><a href="https://github.com/nehamalhotra23/Band-webpage">Musical Band</a></li>
+      <p>In this project, I made a website of musical band. Explored different styling properties which i never knew before.</p>
       <li><a href="https://github.com/nehamalhotra23/pet-website">A Website of Pets</a></li>
-    </ul>
+      <p>This was a simple project to practice adding branches and merging.</p>
+      <li><a href="https://github.com/nehamalhotra23/animal-Shelter">Animal Shelter</a></li>
+        <p>In this project I practice adding classes and divs. I also added branches and how to push code in different branches to try some styling before merging them to master branch.</p>
+    </ol>
+    </div>
+    </div>
+    <!-- <div class="row">
+     <div class="col-xs-2">
+      <div class="well">
+        <ul>
+          <p>Hobbies:</p>
+          <li>Travelling</li>
+          <li></li>
+        </ul>
+      </div>
+      </div>
+      </div>  -->
+
+
+
+
 
 
   </body>
