adding bootstrap and making changes in portfoio site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <meta charset="utf-8">
   <title>Neha's Portfolio</title>
@@ -12,54 +15,51 @@
     <div class="col-xs-3">
       <h1 id="neha">Neha Malhotra</h1>
       <img class="logo" src="img/cover.jpeg" alt="logo of NM" height="200px">
+      <ul id="contact">
+        <li><a href="mailto: nehamalhotra8899@gmail.com">Contact</a></li>
+        <li><a target="_blank" href="https://github.com/nehamalhotra23">Github Profile</a></li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <div class="jumbertron" id="aboutme">
+      <h2>About Me</h2>
+      <p>Hello my name is <strong>Neha Malhotra</strong>. I have been practicing code for the last 5 months. I've completed my bachelors in Business and have MBA in Financial Services. I want to learn code to enter the Tech industry.</p>
+    </div>
+    <div>
+      <div class="col-xs-3">
+        <div class="well">
+          <ol>
+            <br>
+            <br>
+            <h1>Projects I have done this week:</h1>
+            <li><a href="https://github.com/nehamalhotra23/my-first-webpage">My First Project in Epicodus</a></li>
+            <p>This was my first project in EPICODUS. I have learnt so many concepts of HTML through this project. How to add images, linking text to websites and added styling sheet later on in this project.</p>
+            <li><a href="https://github.com/nehamalhotra23/island-resort.git">Island Resort</a></li>
+            <p>In this project, I have learned that how to link different webpages to main webpage. To make it easy for the user to find sources he/she is looking for.</p>
+            <li><a href="https://github.com/nehamalhotra23/wikipedia-rebuild">Epicodus Website</a></li>
+            <p>I practice making Epicodus website. Using Bootstrap to make it mobile friendly. Added rows and colum property of Bootstrap.</p>
+            <li><a href="https://github.com/nehamalhotra23/cupcake-shop">Cup Cake Shop</a></li>
+            <p> In this project, I practice adding floats and box model. </p>
+            <li><a href="https://github.com/nehamalhotra23/Band-webpage">Musical Band</a></li>
+            <p>In this project, I made a website of musical band. Explored different styling properties which i never knew before.</p>
+            <li><a href="https://github.com/nehamalhotra23/pet-website">A Website of Pets</a></li>
+            <p>This was a simple project to practice adding branches and merging.</p>
+            <li><a href="https://github.com/nehamalhotra23/animal-Shelter">Animal Shelter</a></li>
+            <p>In this project I practice adding classes and divs. I also added branches and how to push code in different branches to try some styling before merging them to master branch.</p>
+          </ol>
+        </div>
+      </div>
       <div class="row">
-        <ul id="contact">
-          <li><a href="mailto: nehamalhotra8899@gmail.com">Contact</a></li>
-          <li><a target="_blank" href="https://github.com/nehamalhotra23">Github Profile</a></li>
-        </ul>
+        <div class="col-xs-2">
+          <ul id="list2">
+            <p><span id="span">These are few more projects on which I practice HTML, CSS and Bootstrap concepts:</span></p>
+            <li><a href="https://github.com/nehamalhotra23/week-in-review.git">Week In review</a></li>
+            <li><a href="https://github.com/nehamalhotra23/media-queries.git">Media Queries</a></li>
+            <li><a href="https://github.com/nehamalhotra23/boring-lecture.git">boring-lecture</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </div>
-  <br>
-  <br>
-  <div class="jumbertron" id="aboutme">
-    <h2>About Me</h2>
-    <p>Hello my name is <strong>Neha Malhotra</strong>. I have been practicing code for the last 5 months. I've completed my bachelors in Business and have MBA in Financial Services. I want to learn code to enter the Tech industry.</p>
-  </div>
-  <div class="row">
-    <div class="col-xs-3">
-      <div class="well">
-        <ol>
-          <br>
-          <br>
-          <h1>Projects I have done this week:</h1>
-          <li><a href="https://github.com/nehamalhotra23/my-first-webpage">My First Project in Epicodus</a></li>
-          <p>This was my first project in EPICODUS. I have learnt so many concepts of HTML through this project. How to add images, linking text to websites and added styling sheet later on in this project.</p>
-          <li><a href="https://github.com/nehamalhotra23/island-resort.git">Island Resort</a></li>
-          <p>In this project, I have learned that how to link different webpages to main webpage. To make it easy for the user to find sources he/she is looking for.</p>
-          <li><a href="https://github.com/nehamalhotra23/wikipedia-rebuild">Epicodus Website</a></li>
-          <p>I practice making Epicodus website. Using Bootstrap to make it mobile friendly. Added rows and colum property of Bootstrap.</p>
-          <li><a href="https://github.com/nehamalhotra23/cupcake-shop">Cup Cake Shop</a></li>
-          <p> In this project, I practice adding floats and box model. </p>
-          <li><a href="https://github.com/nehamalhotra23/Band-webpage">Musical Band</a></li>
-          <p>In this project, I made a website of musical band. Explored different styling properties which i never knew before.</p>
-          <li><a href="https://github.com/nehamalhotra23/pet-website">A Website of Pets</a></li>
-          <p>This was a simple project to practice adding branches and merging.</p>
-          <li><a href="https://github.com/nehamalhotra23/animal-Shelter">Animal Shelter</a></li>
-          <p>In this project I practice adding classes and divs. I also added branches and how to push code in different branches to try some styling before merging them to master branch.</p>
-        </ol>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-2">
-        <ul id="list2">
-          <p><span id="span">These are few more projects on which I practice HTML, CSS and Bootstrap concepts:</span></p>
-          <li><a href="https://github.com/nehamalhotra23/week-in-review.git">Week In review</a></li>
-          <li><a href="https://github.com/nehamalhotra23/media-queries.git">Media Queries</a></li>
-          <li><a href="https://github.com/nehamalhotra23/boring-lecture.git">boring-lecture</a></li>
-        </ul>
-      </div>
-    </div>
 </body>
 
 </html>
