--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <meta charset="utf-8">
   <title>Neha's Portfolio</title>
 </head>
